
name:                pietHS
version:             0.1.0.0
synopsis:            Piet interpreter in Haskell
description:         An interpreter for the Piet graphical programming language by David Morgan-Mar (http://www.dangermouse.net/esoteric/piet.html)
license:             PublicDomain
license-file:        LICENSE
author:              M. G. Meier
maintainer:          mgoremeier@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >= 1.10

executable piet
  main-is:           Main.hs
  ghc-options:       -O2
  other-modules:     Definition, PietVM
  other-extensions:  LambdaCase, FlexibleContexts, TypeFamilies, RecordWildCards, MultiWayIf
  build-depends:     base >= 4.8,
                     JuicyPixels >= 3.2.6,
                     vector,
                     deepseq

  hs-source-dirs:    src
  default-language:  Haskell2010
